--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header>
     <h1>Off-Campus Book Drop-Off Locations</h1><br>
-    <h2>Digital Scholarship & Publishing Studio, University of Iowa Libraries, 2020</h2>
+    <h2>Digital Scholarship & Publishing Studio, University of Iowa Libraries</h2>
   </header>
 
 
