--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
     <!-- button-dependent info window -->
     <div id="dialog" title="Off-Campus Book Returns">
-      <h4>If you are away from campus and have books from the University Libraries,
-        you may be wondering how to return them. This map shows the many Locations
-        throughout the Midwest where you can return your books.
+      <h4>If you are away from campus and have books from the University of Iowa
+        Libraries, you may be wondering how to return them. This map shows the many
+        locations throughout the Midwest where you can return your books. Click
+        on the map icons for more information.
       </h4>
     </div>
     <!-- end button-dependent info window -->
