--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <!-- for button-dependent map information window -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="js/easy-button.js"></script>
+  <script src="js/leaflet-tag-filter-button.js"></script>
   <script src="js/index.js"></script>
 </body>
 
