Update info window

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
     <div id="dialog" title="Off-Campus Book Returns">
       <h4>If you are away from campus and have books from the University of Iowa
         Libraries, you may be wondering how to return them. This map shows the many
-        locations throughout the Midwest where you can return your books. Click
-        on the map icons for more information.
+        locations throughout the Midwest where you can return your books. University
+        of Iowa students may drop off their books at any library listed here. Students
+        of other schools may use the academic libraries throughout Iowa, but not
+        the two public libraries. Click on the map icons for more information.
       </h4>
     </div>
     <!-- end button-dependent info window -->
