Edit filter, add new locations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         locations throughout the Midwest where you can return your books. University
         of Iowa students may drop off their books at any library listed here. Students
         of other schools may use the academic libraries throughout Iowa, but not
-        the two public libraries. Click on the map icons for more information.
+        the two public libraries. Use the filter button in the top left corner
+        to find out where you can return books if you are not a University of Iowa
+        student. Click on the map icons for library contact information.
       </h4>
     </div>
     <!-- end button-dependent info window -->
