Update info window

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
     <!-- button-dependent info window -->
     <div id="dialog" title="Off-Campus Book Returns">
-      <h4>If you are away from campus and have books from the University of Iowa
-        Libraries, you may be wondering how to return them. This map shows the many
-        locations throughout the Midwest where you can return your books. University
-        of Iowa students may drop off their books at any library listed here. Students
-        of other schools may use the academic libraries throughout Iowa, but not
+      <h4>If you are away from campus and have books from your university library,
+        you may be wondering how to return them. This map shows the many locations
+        where you can return your books. University of Iowa students may drop off
+        their books at any library listed on the map. Students of other schools
+        throughout Iowa may use all of the Iowa libraries on this map, except for
         the two public libraries. Use the filter button in the top left corner
         to find out where you can return books if you are not a University of Iowa
         student. Click on the map icons for library contact information.
