Add map for non-UI students

--- a/notui_index.html
+++ b/notui_index.html
@@ -26,8 +26,6 @@
   <!-- for info button -->
   <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css'>
   <link rel="stylesheet" href="css/easy-button.css">
-  <!-- for filter buttons -->
-  <link rel="stylesheet" href="css/leaflet-tag-filter-button.css">
   <!-- rest of css -->
   <link rel="stylesheet" href="css/index.css">
 </head>
@@ -46,12 +44,8 @@
     <div id="dialog" title="Off-Campus Book Returns">
       <h4>If you are away from campus and have books from your university library,
         you may be wondering how to return them. This map shows the many locations
-        where you can return your books. University of Iowa students may drop off
-        their books at any library listed on the map. Students of other schools
-        throughout Iowa may use all of the Iowa libraries on this map, except for
-        the two public libraries. Use the filter button in the top left corner
-        to find out where you can return books if you are not a University of Iowa
-        student. Click on the map icons for library contact information.
+        where you can return your books. Click on the map icons for library contact
+        information.
       </h4>
     </div>
     <!-- end button-dependent info window -->
@@ -64,8 +58,7 @@
   <!-- for button-dependent map information window -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="js/easy-button.js"></script>
-  <script src="js/leaflet-tag-filter-button.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/notui_index.js"></script>
 </body>
 
 </html>
